--- a/css/main.css
+++ b/css/main.css
@@ -6,15 +6,36 @@ body {
 
 h1 {
 	text-transform: uppercase;
-	font-weight: 600;
+	font-weight: 900;
 	font-size: 42px;
 	font-family: 'Josefin Sans', sans-serif;
 	text-align: center;
 	letter-spacing: -1px;
+
+	color: black;
+	text-shadow: 1px 1px 2px #ccc;
 }
 
 p {
 	font-size: 18px;
 	line-height: 32px;
 	margin: 40px 0;
+	color: #333;
+}
+
+a {
+	color: black;
+	text-decoration: none;
+	border-bottom: 1px solid #bbb;
+
+	-o-transition: .5s;
+	-ms-transition: .5s;
+	-moz-transition: .5s;
+	-webkit-transition: .5s;
+	transition: .5s;
+}
+
+a:hover {
+	color: #888;
+	border-bottom: 1px solid #ddd;
 }
