--- a/css/main.css
+++ b/css/main.css
@@ -39,3 +39,8 @@ a:hover {
 	color: #888;
 	border-bottom: 1px solid #ddd;
 }
+
+pre code {
+	border-radius: 6px;
+	box-shadow: 0px 0px 4px #ccc;
+}
