--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,11 @@
 body {
-	width: 700px;
+	width: 1000px;
 	margin: 80px auto;
 	font-family: 'Open Sans', sans-serif;
+}
+
+section #main {
+	width: 700px;
 }
 
 h1 {
@@ -43,4 +47,16 @@ a:hover {
 pre code {
 	border-radius: 6px;
 	box-shadow: 0px 0px 4px #ccc;
+}
+
+section #instructions {
+	text-align: center;
+}
+
+img {
+	display: block;
+	margin-bottom: 100px;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
 }
